js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-function-await-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
async
function
f
(
)
{
await
import
.
source
(
'
<
module
source
>
'
)
;
}
reportCompare
(
0
0
)
;
