js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-arrow-function-await-not-extensible-args.js
DONOTEVALUATE
(
)
;
(
async
(
)
=
>
{
await
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
}
)
;
